test/nl/formats/liberty/benchmarks/errors/bundle_member_missing_direction_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      members (D0);
      pin (D0) {
      }
    }
  }
}
